Adding Events CRUD endpoints
